fixed gap issue

--- a/blocks/button/button.css
+++ b/blocks/button/button.css
@@ -15,6 +15,7 @@
   padding-right: 20px;
   padding-left: 20px;
   box-sizing: border-box;
+  margin: 48px 0px 0px;
 }
 
 .button:hover {
