--- a/blocks/place/__website-artist/place__website-artist.css
+++ b/blocks/place/__website-artist/place__website-artist.css
@@ -3,5 +3,5 @@
   font-size: 18px;
   line-height: 22px;
   text-decoration: none;
-  margin: 0;
+  margin: 0 0 48px;
 }
