--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -3,7 +3,6 @@
   grid-template-columns: repeat(2, minmax(0, 1 fr));
   grid-template-rows: min-content min-content 1fr;
   column-gap: 40px;
-  row-gap: 48px;
 }
 
 @media screen and (max-width: 768px) {
